# MemProof

./: .gitignore  README.md  pyproject.toml
evaluation/: ann_rebuild_compat.json  ann_rebuild_compat.py  benchmark.py  bm25_retrieval_agnostic.json  bm25_retrieval_agnostic.py  composition_claude_100.json  composition_claude_100_queries.json  composition_eval.py  composition_eval_claude.py  composition_eval_realtimeqa.py  composition_realtimeqa_100.json  composition_regraded_100.json  composition_results_100.json  composition_results_100_queries.json  composition_results_100_real.json  composition_results_100_real_queries.json  composition_results_50.json  composition_results_500_partial.json  composition_results_500_real.json  composition_results_500_real_queries.json  concurrency_eval.json  concurrency_eval.py  ed25519_latency.json  ed25519_latency.py  experiment_results.json  final_audit.py  generate_architecture.py  generate_figures.py  generate_real_figures.py  insider_threat_100.json  insider_threat_100_queries.json  insider_threat_100_real.json  insider_threat_100_real_queries.json  insider_threat_eval.py  meaningful_benchmark.py  meaningful_results.json  multi_embedder_latency.json  multi_embedder_latency.py  nq_target_overlap.json  nq_target_overlap.py  (+18 more)
src/memproof/: __init__.py  store.py
src/memproof/attacks/: __init__.py  minja.py  poisoned_rag.py
src/memproof/audit/: __init__.py  log.py
src/memproof/backends/: __init__.py  chroma.py
src/memproof/crypto/: __init__.py  attestation.py  commitment.py  merkle.py  (+1 more)
tests/: test_attacks.py  test_memproof.py
(+5 files in other folders)
