[project]
name = "memproof"
version = "0.1.0"
description = "Verifiable Memory Integrity for LLM Agents via Cryptographic Provenance Chains"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "cryptography>=43.0",
    "hashlib-additional>=1.0; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
